<!-- Copyright Matthew Coughlin 2018, 2019 -->

<resources>
    <string name="app_name">Concoction Crafter</string>
    <string name="choose_recipe">Choose a Recipe</string>

    <plurals name="grain_plural">
        <item quantity="one">Grain</item>
        <item quantity="other">Grains</item>
    </plurals>

    <!-- General -->
    <string name="beer_name">Beer Name</string>
    <string name="hop">Hop</string>
    <string name="hops">Hops</string>
    <string name="fermentables">Fermentables</string>
    <string name="name_autofill">What\'s your beer\'s name?</string>
    <string name="ale">Ale</string>
    <string name="lager">Lager</string>
    <string name="amount">Amount</string>
    <string name="amount_autofill">How much?</string>
    <string name="yeast">Yeast</string>
    <string name="recipe">Recipe</string>
    <string name="brew_day">Brew Day</string>
    <string name="brewer">Brewer:</string>
    <string name="date">Date:</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="batch_size">Batch Size:</string>
    <string name="boil_time">Boil Time</string>
    <string name="beer_style">Beer Style</string>
    <string name="hop_addition_time">Addition Time</string>
    <string name="hop_addition_hint">45 min</string>
    <string name="expected_og">Expected Starting Gravity</string>
    <string name="actual_og">Actual Starting Gravity</string>
    <string name="expected_fg">Expected Final Gravity</string>
    <string name="actual_fg">Actual Final Gravity</string>
    <string name="expected_alcohol">Expected Alcohol Content</string>
    <string name="actual_alcohol">Actual Alcohol Content</string>
    <string name="ibus">IBUs</string>
    <string name="mash_temp">Mash Temperature</string>
    <string name="none">None</string>
    <string name="start_boil">Start Boil</string>
    <string name="stop_boil">Stop Boil</string>
    <string name="boil_finished">Boil Finished!</string>
    <string name="click_to_dismiss">Click OK to dismiss</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="import_action">Recipes</string>
    <string name="clear_action">Clear</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="delete_all">Delete All Recipes</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="add_fermentable">Add Fermentable</string>
    <string name="add_hop">Add Hop</string>
    <string name="remaining_time">Boil Time Remaining: %1$d min %2$d sec</string>
    <string name="add_title">Add %1$s</string>
    <string name="add_message">Add %1$.2f oz</string>
    <string name="boil_channel_name">Boil Timer</string>
    <string name="hop_channel_name">Hop Timer</string>
    <string name="boil_channel_description">Concoction Crafter\'s Boil Notifications</string>
    <string name="hop_channel_description">Concoction Crafter\'s Hop Notifications</string>

    <string name="recipe_tag">RECIPE_TAG</string>
    <string name="brew_day_tag">BREW_DAY_TAG</string>

    <!-- Units -->
    <plurals name="pound_plural">
        <item quantity="one">Pound</item>
        <item quantity="other">Pounds</item>
    </plurals>
    <plurals name="kilograms_plural">
        <item quantity="one">Kilogram</item>
        <item quantity="other">Kilograms</item>
    </plurals>
    <plurals name="pounds_abbreviation_plural">
        <item quantity="one">lb</item>
        <item quantity="other">lbs</item>
    </plurals>
    <string name="lbs_abbreviation">lbs</string>
    <string name="kilograms_abbreviation">kg</string>
    <string name="ounces_abbreviation">oz</string>
    <string name="grams_abbreviation">g</string>
    <string name="minutes_abbreviation">mins</string>
    <string name="degrees_f">$1%d \u2109</string>
    <string name="degrees_c">$1%f \u2103</string>

    <!-- Styles -->
    <string-array name="style_options">
        <item>None</item>
        <item>British Bitter</item>
        <item>IPA</item>
        <item>IPA, NE</item>
        <item>Lager</item>
        <item>Oktoberfest</item>
        <item>Pale Ale</item>
        <item>Porter</item>
        <item>Stout</item>
        <item>Other</item>
    </string-array>

    <!-- Fermentable Type -->
    <string-array name="fermentable_options">
        <item>Not Used</item>
        <item>2 Row</item>
        <item>Amber Malt</item>
        <item>Apples</item>
        <item>Barley</item>
        <item>Roasted Barley</item>
        <item>Biscuit Malt</item>
        <item>Black Malt</item>
        <item>Brown Sugar</item>
        <item>Caramunich Malt</item>
        <item>Chocolate Malt</item>
        <item>Crystal 10L</item>
        <item>Crystal 20L</item>
        <item>Crystal 30L</item>
        <item>Crystal 40L</item>
        <item>Crystal 60L</item>
        <item>Crystal 80L</item>
        <item>Crystal 120L</item>
        <item>Honey</item>
        <item>Lemons</item>
        <item>Limes</item>
        <item>Maple Syrup</item>
        <item>Marris Otter</item>
        <item>Oats</item>
        <item>Rye Malt</item>
        <item>Flaked Rye</item>
        <item>Sugar</item>
        <item>Vienna Malt</item>
        <item>Wheat</item>
        <item>Other</item>
    </string-array>

    <!-- Hop Type -->
    <string-array name="hop_options">
        <item>Not Used</item>
        <item>Cascade</item>
        <item>Centennial</item>
        <item>Chinook</item>
        <item>Citra</item>
        <item>Columbus</item>
        <item>Fuggle</item>
        <item>Galaxy</item>
        <item>Hollertau</item>
        <item>Mosaic</item>
        <item>Saaz</item>
        <item>Tettnanger</item>
        <item>Other</item>
    </string-array>

    <!-- Yeast type -->
    <string-array name="yeast_options">
        <item>None</item>
        <item>American Ale</item>
        <item>American Lager</item>
        <item>Belgian Ale</item>
        <item>Brettanomyces</item>
        <item>British Ale</item>
        <item>Czech Lager</item>
        <item>German Ale</item>
        <item>German Lager</item>
        <item>Lactobacillus</item>
        <item>Oktoberfest</item>
        <item>Wine, Red</item>
        <item>Wine, White</item>
        <item>Other</item>
    </string-array>
</resources>
