<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright Matthew Coughlin 2018 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:title="@string/import_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_black"
        android:title="@string/clear_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_sweep_black"
        android:title="@string/delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_action"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>